--- a/src/Sentinel.Mvc4/Views/Shared/_SentinelLayout.cshtml
+++ b/src/Sentinel.Mvc4/Views/Shared/_SentinelLayout.cshtml
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sentinel Panel</title>
     <link type="text/css" href="@Url.Content("~/Content/sentinel/bootstrap.min.css")" rel="stylesheet" />
+    <meta name="description" content="The description of my page" />
 </head>
 <body>
     <div class="navbar navbar-default navbar-fixed-top">
